Updated new style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <div>Scientific Calculator</div>
+    <div class="heading">Scientific Calculator</div>
     <table class="calculator table">
       <thead>
         <tr>
